# nix-bazel-symlinks

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  custom_rules.bzl  main.c  nix_binary.bzl  nix_deps.json  nix_extension.bzl  nix_extractor.go  nix_import.bzl  nix_lock.json  nix_store.bzl  nix_symlink.bzl  nix_unification.bzl  nix_update.go  nix_update.sh  test_nix.sh  test_symlinks.sh
bar_pkg/: BUILD.bazel  MODULE.bazel  bar.c
