exports_files(["nix_extractor"])

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//:custom_rules.bzl", "nix_hello_gen", "nix_patchelf_inspect", "nix_ripgrep_search")

# 1. Aliases for the wrapped entrypoint binaries
alias(
    name = "hello",
    actual = "@nix//:hello",
)

alias(
    name = "patchelf",
    actual = "@nix//:patchelf",
)

alias(
    name = "ripgrep",
    actual = "@nix//:ripgrep",
)

# 2. Custom rules exercising the Nix infrastructure in build actions
# hello_tool defaults to //:hello (which resolves via alias to @nix//:hello)
nix_hello_gen(
    name = "hello_gen_out",
    out = "hello_message.txt",
)

# rg_tool defaults to //:ripgrep (which resolves via alias to @nix//:ripgrep)
nix_ripgrep_search(
    name = "ripgrep_search_out",
    src = "//:main.c",
    pattern = "int main",
    out = "rg_matches.txt",
)

# patchelf_tool defaults to //:patchelf. We use the hash-free raw binary alias from @nix.
nix_patchelf_inspect(
    name = "patchelf_inspect_out",
    binary_to_inspect = "@nix//:hello_raw",
    out = "hello_interpreter.txt",
)

sh_binary(
    name = "nix_update",
    srcs = ["nix_update.sh"],
    data = [
        "nix_deps.json",
        "nix_update.go",
    ],
)
