module(
    name = "nix_bazel_links",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_shell", version = "0.3.0")

# Load and use our Nix Bzlmod module extension
nix_ext = use_extension("//:nix_extension.bzl", "nix_extension")

# Import the unification repository and the store forest into the main workspace scope
use_repo(
    nix_ext,
    "nix",
    "nix_store",
)
